<resources>
    <string name="app_name">ShoeStore</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_email_label">Email</string>
    <string name="password_text">Password</string>
    <string name="login_btn">Login</string>
    <string name="welcome_text">Welcome to Ismail shoe store</string>
    <string name="welcome_text_2">Your number 1 store for quality shoes</string>
    <string name="instruction_btn_text">Shoe List</string>
    <string name="shoe_item_name"><b>Name:</b> %s</string>
    <string name="shoe_item_company"><b>Company:</b> %s</string>
    <string name="shoe_item_size"><b>Size:</b> %s</string>
    <string name="shoe_item_description"><big>Description:</big> %s</string>
</resources>
