<?xml version="1.0" encoding="utf-8"?>
<!--I used Linear layout with vertical orientation because I felt it was perfect for the task -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_2" />

        <Button
            android:id="@+id/to_shoe_list_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruction_btn_text" />
    </LinearLayout>
</layout>